# pcomp-midterm

./: README.md  audio_test.py  launcher.sh  led_blink.py  looper.py  pixi.toml  pyproject.toml
3d-models/: pcomp-looper.3mf  pcomp-looper.stl
examples/: audio_test.py  hall_effect.py  neopixel_test.py
scripts/: looper.py
