[project]
authors = [{name = "Justin", email = "jj4123@nyu.edu"}]
dependencies = ["adafruit-circuitpython-neopixel>=6.3.12,<7", "rpi-ws281x>=5.0.0,<6", "adafruit-blinka>=8.49.0,<9"]
description = "Add a short description here"
name = "pcomp-midterm"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-aarch64"]

[tool.pixi.pypi-dependencies]
pcomp_midterm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.13.0,<4"
